# enzyme_Software

./: .gitignore  CYP3A4_SoM_Training.ipynb  Dark_Manifold_CME_ODE_Data.ipynb  Dark_Manifold_LutheySchulten_Colab.ipynb  Dark_Manifold_RealData_Colab.ipynb  Dark_Manifold_Train_RealSyn3A.ipynb  LEVEL3_QUICKSTART.md  MAINLINE.md  PLAN_90_PERCENT.md  QUANTUM_FORCES_README.md  README.md  ROADMAP_90_PERCENT.md  TLNS_Proper.ipynb  TLNS_Thornburg.ipynb  aromatic_oxidation.py  best_som_model.pt  colab_benchmark_hybrid_engines.ipynb  colab_benchmark_hybrid_lnn.ipynb  colab_cyp3a4_cache_and_train.ipynb  colab_distill_quantum_wave_targets.ipynb  colab_nexus_smoke.ipynb  colab_precompute_benchmark_full_xtb.ipynb  colab_precompute_hybrid_xtb.ipynb  colab_prepare_train_hybrid_both.ipynb  colab_revisit_hybrid_lnn.ipynb  colab_train.ipynb  colab_train_cyp3a4.ipynb  colab_train_cyp3a4.py  colab_train_cyp3a4_base_lnn.ipynb  colab_train_cyp3a4_sideinfo.ipynb  colab_train_hybrid_lnn.ipynb  colab_train_hybrid_lnn_multirun.ipynb  combined_3d_graph.py  debug_cpt_level2.py  deep_symmetry_breaking.py  dft_model.py  diagnose_fragment.py  diagnose_fragment_geometry.py  docking_model.py  dream_phase.py  (+45 more)
trading_research_lab/: .env.example  README.md  pyproject.toml
trading_research_lab/config/: lab_config.yaml
trading_research_lab/src/lab/: __init__.py  cli.py  loop_controller.py  notebook.py  pivot_rules.py
trading_research_lab/src/lab/backtest/: evaluator.py  (+4 more)
trading_research_lab/tests/: test_anti_loop_pivot.py  test_data_vault_integrity.py  test_no_lookahead.py  test_reproducible_backtest.py
(+2468 files in other folders)
