[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enzyme-software"
version = "0.1.0"
description = "Modular pipeline scaffolding for enzyme design"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ml = ["numpy>=1.26", "torch>=2.2", "matplotlib>=3.8"]

[project.scripts]
enzyme = "enzyme_software.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
